@@ -26,17 +26,17 @@ package peersim.util;
 
 /**
  * This class provides extended statistical informations about the inspected 
- * distribution. In particular, it provides functions to compute the 3rd and
- * 4th degree momentus.
+ * distribution. In particular, it provides functions to compute the skewness
+ * (the 3rd degree moment) and the kurtosis (4th degree moment).
  *
  * @author  Gian Paolo Jesi
  */
-public class ExtendedStats extends IncrementalStats {
+public class MomentStats extends IncrementalStats {
     
     private double cubicsum, quadsum; // incremental sums
     
-    /** Creates a new instance of ExtendedStats */
-    public ExtendedStats() {
+    /** Creates a new instance of MomentStats */
+    public MomentStats() {
         super();
         cubicsum = 0.0;
         quadsum = 0.0;
@@ -58,34 +58,34 @@ public class ExtendedStats extends IncrementalStats {
         quadsum += item * cubicsum;
     }
    
-    /** Output on a single line the superclass statistics plus the third and
-     * fourth degree momentus.
+    /** Outputs on a single line the superclass statistics plus the 
+     * current skewness and kurtosis.
      *
-     * @return The superclass and its own statistics string.
+     * @return All the statistics available.
      */
     public String toString() {
-        return super.toString()+" "+momentus3()+" "+momentus4();
+        return super.toString()+" "+getSkewness()+" "+getKurtosis();
     }
     
-    /** Computes the degree 3 momentus on the node values distribution and 
+    /** Computes the skewness on the node values distribution and 
      * returns the asymmetry coefficient. It gives an indication about the 
      * distribution symmetry compared to the average.
      *
-     *@return The 3rd degree momentus value as a double.
+     *@return The skewness value as a double.
      */ 
-    public double momentus3() {
+    public double getSkewness() {
         int n = this.getN();
         double m3 = (((double)n) / (n-1)) * (cubicsum/n - Math.pow(getAverage(), 3) );
         return ( m3 / Math.pow(getStD(), 3 ) );
     }
     
-    /** Computes the degree 4 momentus on the node values distribution and 
+    /** Computes the kurtosis on the node values distribution and 
      *  returns the flatness coefficient. It gives an indication about the 
      *  distribution sharpness or flatness.
      *
-     * @return The 4th degree momentus value as a double.
+     * @return The kurtosis momentus value as a double.
      */ 
-    public double momentus4() {
+    public double getKurtosis(){
         int n = this.getN();
         double m4 = (((double)n) / (n-1)) * (quadsum/n - Math.pow(getAverage(), 4) );
         return ( m4 / Math.pow(getStD(), 4) )-3;
