@@ -1,3 +1,5 @@
+Name change: peersim.util.ExtendedStats => peersim.util.MomentStats 
+
 Added peersim.cdsim.DaemonProtocol as a generic entry point for all
 kinds of hacks, to avoid complicating the simulator. It can be used
 to run observers and modifiers several times within one cycle.
